--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
 [project]
-name = "metadata-check"
-version = "0.1.0"
-description = "Add your description here"
+name = "biobrick-metadata-check"
+version = "1.0.0"
+description = "Validates BIOBRICK.yaml metadata files, verifies asset existence, and checks schema conformance"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
-    "jsonschema>=4.25.1",
-    "pyarrow>=22.0.0",
-    "pyyaml>=6.0.3",
+    "PyYAML>=6.0.1",
+    "pyarrow>=14.0.1",
+    "jsonschema>=4.20.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
