--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Validates BIOBRICK.yaml metadata files, verifies asset existence,
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "PyYAML>=6.0.1",
-    "pyarrow>=14.0.1",
-    "jsonschema>=4.20.0",
+    "jsonschema>=4.25.1",
+    "numpy>=2.3.4",
+    "pyarrow>=22.0.0",
+    "pyyaml>=6.0.3",
 ]
