--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "jsonschema>=4.25.1",
+    "numpy<2.0",
     "pyarrow>=22.0.0",
     "pyyaml>=6.0.3",
 ]
