--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -15,6 +15,9 @@ jobs:
               shell: bash
               run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
             - name: Build and push Docker Image
               uses: docker/build-push-action@v6
               with:
