add manual run of actions

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,5 +1,5 @@
 name: Build and Push to GHCR
-on: [release]
+on: [release, workflow_dispatch]
 jobs:
     check-push:
         runs-on: ubuntu-latest
