--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -2,6 +2,10 @@ name: Build and Push to GHCR
 on: [release, workflow_dispatch]
 jobs:
     check-push:
+        name: Push the check to GHCR
+        permissions:
+            contents: read
+            packages: write
         runs-on: ubuntu-latest
         steps:
             - name: Docker meta
