--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -8,19 +8,20 @@ jobs:
             packages: write
         runs-on: ubuntu-latest
         steps:
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
             - name: Docker meta
               id: meta
               uses: docker/metadata-action@v5
               with:
-                images: |
-                    ghcr.io/${{ github.repository }}
+                images: ghcr.io/${{ github.repository }}
+                tags: |
+                    type=raw,value=latest,enable={{is_default_branch}}
 
             - name: Login to GitHub Container Registry
               shell: bash
               run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
 
             - name: Build and push Docker Image
               uses: docker/build-push-action@v6
