--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,5 +1,5 @@
 name: Build and Push to GHCR
-on: [release, workflow_dispatch]
+on: [push, release, workflow_dispatch]
 jobs:
     check-push:
         name: Push the check to GHCR
