--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Validates BIOBRICK.yaml metadata files, verifies asset existence,
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "biobricks>=0.3.9",
     "jsonschema>=4.25.1",
     "pyarrow>=22.0.0",
     "pyyaml>=6.0.3",
